# hikeandfly

./: .dockerignore  Dockerfile  README.md  run.sh
.github/workflows/: develop.yml  main.yml
backend/: download_data.sh  nginx.conf  requirements.txt  uwsgi.ini
backend-rust/: .gitignore  Cargo.toml  download_data.sh
backend-rust-wasm/: Cargo.toml
backend-rust-wasm/src/: lib.rs
backend-rust/.cargo/: mutants.toml
backend-rust/benches/: search_benchmark.rs  textsearch_benchmark.rs
backend-rust/src/: btree.rs  btree_test.rs  colors.rs  colors_test.rs  height_data.rs  height_data_test.rs  lib.rs  line.rs  line_test.rs  map_like.rs  pqueue.rs  pqueue_test.rs  radix_heap.rs  radix_heap_test.rs  search.rs  search_test.rs  simd_linspace.rs  simd_linspace_test.rs  textsearch.rs  textsearch_test.rs  types.rs
backend-rust/testdata/: test_data.jsonl
backend/src/: server.py
backend/src/data_analysis/: height_data.py  pqueue.py  search.py  visualization.ipynb
flight_cone_lib/: Cargo.toml  download_test_data.sh
flight_cone_lib/benches/: search_benchmark.rs
flight_cone_lib/src/: lib.rs  pqueue.rs  pqueue_test.rs  search.rs
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  sw.ts
frontend/src/components/: BaseLayers.tsx  CurrentLocation.tsx  CurrentNode.tsx  FlyingSiteOverlay.tsx  Grid.tsx  HeightPlotCard.tsx  ImageOverlay.tsx  InfoPanel.tsx  OfflineDownloadControl.tsx  SearchCard.tsx  SearchComponent.tsx  SettingsCard.tsx  StartMarker.tsx
frontend/src/leaflet/: CanvasOverlay.ts  ReactCanvasOverlay.ts
frontend/src/utils/: offline.test.ts  offline.ts  search.ts  types.ts  utils.ts
frontend/src/wasm/: glide.ts
search_preprocess/: .gitignore  download_data.sh  pixi.toml
search_preprocess/src/: filter_search_data.py  preprocess_flying_site_data.py  preprocess_search_data.py
wasm-lib/: Cargo.toml
