[package]
name = "backend-rust-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
backend-rust = { path = "../backend-rust", default-features = false }
getrandom = { version = "0.2.17", features = ["js"] }
ndarray = "0.16.1"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
