[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
cached = "0.56.0"
image = "0.25.2"
ndarray = "0.16.1"
num-traits = "0.2.19"
once_cell = "1.21.3"
quick-xml = "0.36.2"
rocket = { version = "0.5.1", features = ["json", "tls"] }
rocket_ws = "0.1.1"
serde = { version = "1.0.210", features = ["derive", "serde_derive"] }
serde_json = "1.0.145"

[dev-dependencies]
approx = "0.5.1"
proptest = "1.5.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_benchmark"
harness = false

#[profile.release]
#debug = 1
