[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[features]
default = ["server"]
server = [
    "dep:flexbuffers",
    "dep:fs_extra",
    "dep:image",
    "dep:once_cell",
    "dep:quick-xml",
    "dep:reqwest",
    "dep:rocket",
    "dep:rocket_ws",
    "dep:serde_json",
]

[dependencies]
byteorder = "1.5.0"
cached = "0.56.0"
flexbuffers = { version = "25.9.23", optional = true }
fs_extra = { version = "1.3.0", optional = true }
image = { version = "0.25.2", optional = true }
ndarray = "0.16.1"
num-traits = "0.2.19"
once_cell = { version = "1.21.3", optional = true }
quick-xml = { version = "0.36.2", optional = true }
reqwest = { version = "0.12.24", features = ["default-tls"], optional = true }
rocket = { version = "0.5.1", features = ["json", "tls"], optional = true }
rocket_ws = { version = "0.1.1", optional = true }
serde = { version = "1.0.210", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.145", optional = true }

[dev-dependencies]
approx = "0.5.1"
proptest = "1.5.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_benchmark"
harness = false

[[bench]]
name = "textsearch_benchmark"
harness = false

#[profile.release]
#debug = 1

[[bin]]
name = "main"
path = "src/bin/main.rs"
required-features = ["server"]

[[bin]]
name = "preprocess_search_index"
path = "src/bin/preprocess_search_index.rs"
